src/components/page-section/navbar/navbar.scss
.navbar {
    background-color: #b7b7b787;
    color: #000000;
    padding: 10px 20px;
    border-radius: 16px;
    display: flex;
    justify-content: space-between;
    transition: 0.3s;

    .logo {
        display: flex;
        align-items: center;
        .logo-icon {
          width: 45px;
          filter: invert(0); //color-image
          transition: 0.3s;
        }

        .title-logo {
           font-weight: 600;
           text-align: center;
        }
     }
     .nav-1 {
        display: flex;
        align-items: center;
      
        .links-page {
           ul {
              display: flex;
              justify-content: center;
              gap: 3rem;
              transition: 0.3s;
               li {
                   font-size: 1.2rem;
                   font-weight: 600;
                   cursor: pointer;
                   color: rgb(29 26 26 / 88%);
                   &:hover {
                     color: #000000;
                   }
                }
              }
          }
        }

    .nav-2 {
       display: flex;
       justify-content: center;
       align-items: center;
       gap: 1rem;

       .lang {
         .css-e34boy-MuiAvatar-root {
           background-color: #f3f3f5;
         }
         .MuiAvatar-root .icon-1 {
          color: #000000;
         }
       }

       .sign-in {
          button {
            background-color: #CCCCCC;
            color: #000000;
            padding: 12px 10px;
            font-size: 1rem;
            border-radius: 12px;
            cursor: pointer;
            transition: all 0.3s ease;
            box-shadow: 0 4px 12px rgba(108, 99, 255, 0.3);
            &:hover {
              background: #b0b0b4;
              box-shadow: 0 8px 18px rgba(162, 162, 163, 0.4);
            }
          }
       }
       .theme {
         button {
           background-color: transparent;
           cursor: pointer;
           transition: all 0.3s ease;
            img {
               width: 35px;
               height: 35px;
               object-fit: cover;
            }
            &:hover {
              transform: scale(1.08);
            }
         }
       }
     }
}



// Dark Mode 
body.dark .navbar {
  background-color: #3B346A;
  color: #ffffff;
  .logo-icon {
    filter: invert(1); //color-image
  }

  .nav-1 ul li {
    color: #ffffff;

    &:hover {
      color: #fffdfd9e;
    }
  }

  .nav-2 {
    .lang {
      .css-e34boy-MuiAvatar-root {
        background-color: #2D274C;
      }
      .MuiAvatar-root .icon-1 {
        color: #ffffff;
      }
    }
    .sign-in button {
       background-color: #2D274C;
       color: #ffffff;
  }
  }
}
.lang-menu {
   min-width: 200px;
}

.dark .lang-menu {
  background-color: #2D274C;
  color: #ffffff;
  .MuiMenuItem-root {
    color: #ffffff;
  }
}
.dark .css-x6cj71-MuiPaper-root-MuiPopover-paper-MuiMenu-paper::before{
   background-color: #2D274C;
}

